--- a/food/index.html
+++ b/food/index.html
@@ -75,11 +75,178 @@
             <div class="category ">
                 Desserts
             </div>
-
-
         </div>
     </section>
 
+    <!-- menu Section -->
+     <section class="container">
+            <h2 class="section-title">
+                Popular Dishes
+            </h2>
+
+            <div class="menu">
+                <!-- menu 1 -->
+                 <div class="menu-item">
+                    <img src="./assets/image/hero-section.jpg" alt="" class="item-image">
+
+                    <div class="item-content">
+                        <h3 class="item-title">Margherita Pizza</h3>
+                        <p class="item-desc">
+                            Classic pizza with tomato souce, mozzarella and fresh basil
+                        </p>
+                        <div class="item-footer">
+                        <span class="item-price"> Tzs 5000</span>
+                        <button class="add-to-cart"><i class="fas fa-plus"></i></button>  
+                        </div>
+                    </div>
+                 </div>
+
+                 <!-- menu 2 -->
+                 <div class="menu-item">
+                    <img src="./assets/image/hero-section.jpg" alt="" class="item-image">
+
+                    <div class="item-content">
+                        <h3 class="item-title">Classic Burger</h3>
+                        <p class="item-desc">
+                            Beef patty with cheese, lettuce, tomato and special souce
+                        </p>
+                        <div class="item-footer">
+                        <span class="item-price"> Tzs 6000</span>
+                        <button class="add-to-cart"><i class="fas fa-plus"></i></button>  
+                        </div>
+                    </div>
+                 </div>
+
+                   <!-- menu 3 -->
+                   <div class="menu-item">
+                    <img src="./assets/image/hero-section.jpg" alt="" class="item-image">
+
+                    <div class="item-content">
+                        <h3 class="item-title">California Rolls</h3>
+                        <p class="item-desc">
+                            Crab, avacado and cucumber wrapeped in seaweed and rice
+                        </p>
+                        <div class="item-footer">
+                        <span class="item-price"> Tzs 2000</span>
+                        <button class="add-to-cart"><i class="fas fa-plus"></i></button>  
+                        </div>
+                    </div>
+                 </div>
+
+                   <!-- menu 4 -->
+                   <div class="menu-item">
+                    <img src="./assets/image/hero-section.jpg" alt="" class="item-image">
+
+                    <div class="item-content">
+                        <h3 class="item-title">Classic Burger</h3>
+                        <p class="item-desc">
+                            Beef patty with cheese, lettuce, tomato and special souce
+                        </p>
+                        <div class="item-footer">
+                        <span class="item-price"> Tzs 6000</span>
+                        <button class="add-to-cart"><i class="fas fa-plus"></i></button>  
+                        </div>
+                    </div>
+                 </div>
+
+                   <!-- menu 5 -->
+                   <div class="menu-item">
+                    <img src="./assets/image/hero-section.jpg" alt="" class="item-image">
+
+                    <div class="item-content">
+                        <h3 class="item-title">Classic Burger</h3>
+                        <p class="item-desc">
+                            Beef patty with cheese, lettuce, tomato and special souce
+                        </p>
+                        <div class="item-footer">
+                        <span class="item-price"> Tzs 6000</span>
+                        <button class="add-to-cart"><i class="fas fa-plus"></i></button>  
+                        </div>
+                    </div>
+                 </div>
+
+                   <!-- menu 2 -->
+                   <div class="menu-item">
+                    <img src="./assets/image/hero-section.jpg" alt="" class="item-image">
+
+                    <div class="item-content">
+                        <h3 class="item-title">Classic Burger</h3>
+                        <p class="item-desc">
+                            Beef patty with cheese, lettuce, tomato and special souce
+                        </p>
+                        <div class="item-footer">
+                        <span class="item-price"> Tzs 6000</span>
+                        <button class="add-to-cart"><i class="fas fa-plus"></i></button>  
+                        </div>
+                    </div>
+                 </div>
+
+                   <!-- menu 6 -->
+                   <div class="menu-item">
+                    <img src="./assets/image/hero-section.jpg" alt="" class="item-image">
+
+                    <div class="item-content">
+                        <h3 class="item-title">Classic Burger</h3>
+                        <p class="item-desc">
+                            Beef patty with cheese, lettuce, tomato and special souce
+                        </p>
+                        <div class="item-footer">
+                        <span class="item-price"> Tzs 6000</span>
+                        <button class="add-to-cart"><i class="fas fa-plus"></i></button>  
+                        </div>
+                    </div>
+                 </div>
+            </div>
+     </section>
+
+<!-- Cart Sidebar -->
+<div class="overlay" id="overlay"></div>
+<div class="cart-sidebar">
+    <div class="cart-header">
+        <h2>Your Cart</h2>
+        <button class="close-cart" id="close-cart"><i class="fas fa-times"></i></button>
+    </div>
+
+    <div class="cart-items">
+        <!-- cart item 1 -->
+        <div class="cart-item">
+            <img src="./assets/image/hero-section.jpg" alt="" class="cart-item-image">
+            <div class="cart-item-details">
+                <h3 class="cart-item-title">
+                    Margherita Pizza
+                </h3>
+                <span class="cart-item-price">Tzs 5000</span>
+                <div class="cart-item-quantity">
+                    <button class="quantity-btn"><i class="fas fa-minus"></i></button>
+                    <span>1</span>
+                    <button class="quantity-btn"><i class="fas fa-plus"></i></button>
+                </div>
+
+            </div>
+        </div>
+
+         <!-- cart item 2 -->
+         <div class="cart-item">
+            <img src="./assets/image/hero-section.jpg" alt="" class="cart-item-image">
+            <div class="cart-item-details">
+                <h3 class="cart-item-title">
+                    Classic Burger
+                </h3>
+                <span class="cart-item-price">Tzs 5000</span>
+                <div class="cart-item-quantity">
+                    <button class="quantity-btn"><i class="fas fa-minus"></i></button>
+                    <span>1</span>
+                    <button class="quantity-btn"><i class="fas fa-plus"></i></button>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="cart-total">Total: Tzs 10000</div>
+    <button class="checkout-btn">Proceed to Checkout</button>
+</div>
     <script src="./assets/script/script.js"></script>
 </body>
 </html>
